# mandelbrot-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  embed.py  main.cpp  vcpkg.json
assets/include/: resources.hpp
assets/shaders/: common.vert  generator.frag  shader-test.frag
imgui/: CMakeLists.txt
include/: app.hpp  color.hpp  common-include.hpp  framebuffer.hpp  logic.hpp  palette.hpp  quad.hpp  shader.hpp  texture.hpp  timer.hpp  util.hpp
src/: app.cpp  color.cpp  framebuffer.cpp  logic.cpp  palette.cpp  quad.cpp  shader.cpp  texture.cpp
test/: CMakeLists.txt  color-blending.cpp
